--- a/TechJobsMVC/Views/List/Jobs.cshtml
+++ b/TechJobsMVC/Views/List/Jobs.cshtml
@@ -1,9 +1,30 @@
 ﻿<div class="container body-content">
 
     <h1>@ViewBag.title</h1>
+    <table class=" = "tablejob-listing">
 
-    @{
+    @foreach (var job in ViewBag.jobs)
+    {
         //TODO #1: Use a loop to display job results in a table.
+        <tr>
+            <td>
+                ID:  @job.Id
+                <br />
+                Name:  @job.Name
+                <br />
+                Employer:
+                @job.Employer
+                <br />
+                Location:
+                @job.Location
+                <br />
+                Position Type:
+                @job.PositionType
+                <br />
+                Skills:
+                @job.CoreCompetency
+            </td>
+        </tr>
     }
 
 
