--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -15,7 +15,10 @@
             //TODO #2: Complete the View Jobs By Category Table
         }
 
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
+        <td>
+            <a asp-controller="List" asp-action="Jobs" asp-route-column="All" asp-route-value="AllJobs"> All Listings </a>
+        </td>
+
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
